--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,28 +35,33 @@
 }
 
 html {
-   scroll-behavior: smooth;
    font-size: var(--font-size-10);
    font-weight: var(--font-weight-400);
    font-family: var(--font-fam-commissioner);
+   scroll-behavior: smooth;
 }
 
 body {
    font-size: 1.6rem;
+   font-weight: var(--font-weight-400);
+   color: var(--dark-gray);
    min-width: 32rem;
    max-width: 1440px;
    margin: auto;
+
+   position: relative;
    background: var(--body-bg);
 }
 
 .overlay.active {
-   position: absolute;
+   position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: var(--black);
-   opacity: 0.65;
+   opacity: 0.5;
+   z-index: 1;
 }
 
 @media (min-width: 769px) {
@@ -79,7 +84,7 @@ body {
    display: flex;
    align-items: center;
    justify-content: space-between;
-   padding: 4.5rem 3rem 18rem 3rem;
+   padding: 4.5rem 2.5rem 18rem 2.5rem;
 
    position: relative;
    width: 100%;
@@ -127,6 +132,7 @@ body {
 /* add show & active classes using javascript start here */
 .nav_list.show {
    display: block; /* show the display */
+   z-index: 2;
 }
 
 .nav_list.active {
@@ -311,9 +317,136 @@ body {
    border-radius: 1rem;
    width: 100%;
    text-align: center;
-   padding: 0 1rem;
+   padding: 0 1rem 5rem 1rem;
 }
 
 .mastercraft_logo {
    margin-top: -2.5rem;
+}
+
+.intro_title {
+   color: var(--black);
+   font-weight: var(--font-weight-700);
+}
+
+.intro_description {
+   font-size: 1.4rem;
+   line-height: 2.5rem;
+   padding-bottom: 2rem;
+}
+
+.back_bookmark_btn_container {
+   display: grid;
+   grid-template-columns: 1fr auto;
+   grid-gap: 1rem;
+   align-items: center;
+
+   width: 100%;
+   padding: 0 2rem;
+
+   /* border: 0.1rem solid red; */
+}
+
+.btn {
+   display: flex;
+   align-items: center;
+   border: none;
+   border-radius: 5rem;
+
+   color: var(--white);
+   font-weight: var(--font-weight-700);
+   letter-spacing: 0.1rem;
+
+   cursor: pointer;
+   width: 100%;
+}
+
+.back_btn {
+   justify-content: center;
+   width: 15rem;
+   background: var(--moderate-cyan);
+   padding: 2rem;
+}
+
+.back_btn:hover {
+   background: var(--dark-cyan);
+}
+
+@media (min-width: 370px) {
+   .back_btn {
+      width: 20rem;
+   }
+}
+
+.bookmark_btn {
+   display: flex;
+   border: none;
+   gap: 1rem; /* between circle & bookmark */
+}
+
+/* add slide classes using javascript */
+.bookmark_btn.slide {
+   background: #f4f8f9;
+}
+
+@media (min-width: 500px) {
+   .bookmark_btn {
+      width: 17rem;
+   }
+}
+
+.bookmark_btn .circle_color {
+   fill: var(--black);
+}
+
+.bookmark_btn .circle_color:hover {
+   fill: var(--moderate-cyan);
+}
+
+/* add slide classes using javascript */
+.bookmark_btn .circle_color.slide {
+   fill: var(--moderate-cyan);
+}
+
+@media (min-width: 500px) {
+   /* add active classes using javascript */
+   .bookmark_btn .circle.slide {
+      transform: translateX(200%);
+      transition: all 0.5s ease;
+   }
+}
+
+.bookmark_btn path {
+   fill: var(--white);
+}
+
+.bookmark_text,
+.ed {
+   display: none;
+   align-items: center;
+   justify-content: center;
+   color: var(--dark-gray);
+   cursor: pointer;
+}
+
+@media (min-width: 500px) {
+   .bookmark_text {
+      display: flex;
+   }
+
+   .bookmark_text:hover {
+      transform: scale(1.1);
+   }
+
+   /* add active classes using javascript */
+   .bookmark_text.slide,
+   .ed.slide {
+      display: flex;
+      gap: 0.75rem;
+      transform: translateX(-50%);
+      color: var(--dark-cyan);
+      transition: all 0.5s ease;
+      font-weight: var(--font-weight-700);
+      transition: all 0.5s ease;
+   }
 }
