--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,7 +122,7 @@ body {
    left: 0;
 
    width: 100%;
-   padding: 2rem 4rem;
+   padding: 2rem 3rem;
 
    visibility: hidden;
    transform: translateX(-100%); /* slide */
@@ -144,7 +144,7 @@ body {
 .pointer {
    position: absolute;
    top: -1rem;
-   right: 5rem;
+   right: 4rem;
    border: 5rem solid transparent;
    border-top: 0;
    border-bottom: 5rem solid var(--white);
@@ -370,6 +370,7 @@ body {
 
 .back_btn:hover {
    background: var(--dark-cyan);
+   transform: scale(1.05);
 }
 
 @media (min-width: 370px) {
@@ -385,7 +386,7 @@ body {
 }
 
 /* add slide classes using javascript */
-.bookmark_btn.slide {
+.bookmark_btn.active {
    background: #f4f8f9;
 }
 
@@ -396,7 +397,7 @@ body {
 }
 
 .bookmark_btn .circle_color {
-   fill: var(--black);
+   fill: var(--dark-gray);
 }
 
 .bookmark_btn .circle_color:hover {
@@ -404,15 +405,20 @@ body {
 }
 
 /* add slide classes using javascript */
-.bookmark_btn .circle_color.slide {
-   fill: var(--moderate-cyan);
+.bookmark_btn .circle_color.active {
+   fill: var(--dark-cyan);
 }
 
 @media (min-width: 500px) {
+   .bookmark_btn .circle {
+      transform: translateX(0%);
+      transition: all 500ms ease-in-out;
+   }
+
    /* add active classes using javascript */
-   .bookmark_btn .circle.slide {
+   .bookmark_btn .circle.active {
       transform: translateX(200%);
-      transition: all 0.5s ease;
+      transition: all 500ms ease-in-out;
    }
 }
 
@@ -426,27 +432,25 @@ body {
    align-items: center;
    justify-content: center;
    color: var(--dark-gray);
+   transform: translateX(0%);
+   transition: all 500ms ease-in-out;
    cursor: pointer;
 }
 
 @media (min-width: 500px) {
    .bookmark_text {
       display: flex;
-   }
-
-   .bookmark_text:hover {
-      transform: scale(1.1);
+      font-weight: var(--font-weight-700);
    }
 
    /* add active classes using javascript */
-   .bookmark_text.slide,
-   .ed.slide {
+   .bookmark_text.active,
+   .ed.active {
       display: flex;
-      gap: 0.75rem;
+      gap: 0.8rem; /* between bookmark & ed */
       transform: translateX(-50%);
+      transition: all 500ms ease-in-out;
       color: var(--dark-cyan);
-      transition: all 0.5s ease;
       font-weight: var(--font-weight-700);
-      transition: all 0.5s ease;
    }
 }
