--- a/styles/styles.css
+++ b/styles/styles.css
@@ -401,7 +401,7 @@ body {
 }
 
 .bookmark_btn .circle_color:hover {
-   fill: var(--moderate-cyan);
+   fill: var(--dark-cyan);
 }
 
 /* add slide classes using javascript */
@@ -447,10 +447,10 @@ body {
    .bookmark_text.active,
    .ed.active {
       display: flex;
-      gap: 0.8rem; /* between bookmark & ed */
-      transform: translateX(-50%);
-      transition: all 500ms ease-in-out;
-      color: var(--dark-cyan);
+      gap: 0.85rem; /* between bookmark & ed */
       font-weight: var(--font-weight-700);
+      transform: translateX(-50%);
+      transition: all 300ms ease-in-out;
+      color: var(--dark-cyan);
    }
 }
