--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,18 +84,43 @@ body {
    display: flex;
    align-items: center;
    justify-content: space-between;
-   padding: 4.5rem 2.5rem 18rem 2.5rem;
+   /* padding: 4.5rem 2.5rem 35rem 2.5rem; */
 
    position: relative;
    width: 100%;
 }
 
-@media (min-width: 769px) {
+@media (min-width: 120px) {
    .header {
-      padding: 0rem 10rem 22rem 14rem;
+      padding: 4.5rem 2.5rem 15rem 2.5rem;
    }
 }
 
+@media (min-width: 425px) {
+   .header {
+      padding: 4.5rem 2.5rem 22rem 2.5rem;
+   }
+}
+
+@media (min-width: 768px) {
+   .header {
+      padding: 4.5rem 2.5rem 40rem 2.5rem;
+   }
+}
+
+@media (min-width: 769px) {
+   .header {
+      padding: 0 2.5rem 12rem 2.5rem;
+   }
+}
+
+@media (min-width: 1440px) {
+   .header {
+      padding: 0 2.5rem 20rem 2.5rem;
+   }
+}
+
+/* ================= hero ================= */
 .header_hero {
    position: absolute;
    top: 0;
@@ -115,6 +140,7 @@ body {
    z-index: 1;
 }
 
+/* ================= navigation list ================= */
 .nav_list {
    display: none;
    position: absolute;
@@ -240,7 +266,7 @@ body {
    }
 }
 
-/* all about burger is here */
+/* ================= all about burger is here ================= */
 .burger_menu {
    display: flex;
    flex-direction: column;
@@ -294,18 +320,27 @@ body {
    flex-direction: column;
    align-items: center;
    justify-content: center;
+   gap: 2rem; /* between each section like intro, stats */
 
    padding: 0 2.5rem;
    width: 100%;
 }
 
-@media (min-width: 769px) {
+@media (min-width: 1024px) {
+   .main_content {
+      padding: 0 20rem;
+      /* padding: 0rem 14rem 15rem 14rem; */
+   }
+}
+
+@media (min-width: 1440px) {
    .main_content {
       padding: 0 35rem;
       /* padding: 0rem 14rem 15rem 14rem; */
    }
 }
 
+/* ================= intro ================= */
 .intro {
    display: flex;
    flex-direction: column;
@@ -318,6 +353,12 @@ body {
    width: 100%;
    text-align: center;
    padding: 0 1rem 5rem 1rem;
+}
+
+@media (min-width: 1440px) {
+   .intro {
+      padding: 0 5rem 10rem 5rem;
+   }
 }
 
 .mastercraft_logo {
@@ -335,6 +376,7 @@ body {
    padding-bottom: 2rem;
 }
 
+/* ================= back this project & bookmark button ================= */
 .back_bookmark_btn_container {
    display: grid;
    grid-template-columns: 1fr auto;
@@ -454,3 +496,108 @@ body {
       color: var(--dark-cyan);
    }
 }
+
+/* ================= statistics ================= */
+.statistics_container {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+   width: 100%;
+
+   background: var(--white);
+   text-align: center;
+   /* padding: 0 1rem 5rem 1rem; */
+}
+
+.statistics_group {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   gap: 2rem; /* between each stats */
+   padding: 3rem 0;
+   width: 100%;
+}
+
+@media (min-width: 769px) {
+   .statistics_group {
+      flex-direction: row;
+      padding-top: 5rem;
+   }
+}
+
+.stats {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+
+   gap: 0.5rem; /* between total & stat_details */
+   width: 100%;
+}
+
+@media (min-width: 769px) {
+   .statistics_group .stats:nth-child(2) {
+      border-left: 0.15rem solid var(--dark-gray);
+      border-right: 0.15rem solid var(--dark-gray);
+   }
+}
+
+.total {
+   font-size: 3.5rem;
+   font-weight: var(--font-weight-700);
+   color: var(--black);
+}
+
+.statistics_group .stats:nth-child(2) p:nth-child(1) {
+   border-top: 0.15rem solid var(--dark-gray);
+   padding-top: 3rem;
+}
+
+.statistics_group .stats:nth-child(2) p:nth-child(2) {
+   border-bottom: 0.15rem solid var(--dark-gray);
+   padding-bottom: 3rem;
+}
+
+@media (min-width: 769px) {
+   .statistics_group .stats:nth-child(2) p:nth-child(1) {
+      border-top: none;
+      padding-top: 0;
+   }
+
+   .statistics_group .stats:nth-child(2) p:nth-child(2) {
+      border-bottom: none;
+      padding-bottom: 0;
+   }
+}
+
+/* mediaa */
+/* @media (min-width: 120px) {
+   .header {
+      padding: 4.5rem 2.5rem 15rem 2.5rem;
+   }
+}
+
+@media (min-width: 425px) {
+   .header {
+      padding: 4.5rem 2.5rem 22rem 2.5rem;
+   }
+}
+
+@media (min-width: 768px) {
+   .header {
+      padding: 4.5rem 2.5rem 40rem 2.5rem;
+   }
+}
+
+@media (min-width: 769px) {
+   .header {
+      padding: 0 2.5rem 12rem 2.5rem;
+   }
+}
+
+@media (min-width: 1440px) {
+   .header {
+      padding: 0 2.5rem 20rem 2.5rem;
+   }
+} */
