--- a/styles/styles.css
+++ b/styles/styles.css
@@ -454,13 +454,13 @@ body {
 @media (min-width: 500px) {
    .bookmark_btn .circle {
       transform: translateX(0%);
-      transition: all 500ms ease-in-out;
+      transition: all 300ms ease-in-out;
    }
 
    /* add active classes using javascript */
    .bookmark_btn .circle.active {
       transform: translateX(200%);
-      transition: all 500ms ease-in-out;
+      transition: all 300ms ease-in-out;
    }
 }
 
@@ -475,7 +475,7 @@ body {
    justify-content: center;
    color: var(--dark-gray);
    transform: translateX(0%);
-   transition: all 500ms ease-in-out;
+   transition: all 300ms ease-in-out;
    cursor: pointer;
 }
 
@@ -497,17 +497,18 @@ body {
    }
 }
 
-/* ================= statistics ================= */
+/* ================= statistics section ================= */
 .statistics_container {
    display: flex;
-   align-items: center;
+   align-items: flex-start;
    justify-content: center;
    flex-direction: column;
+   gap: 2rem; /* between statistics_group & statistics_bar */
    width: 100%;
 
    background: var(--white);
    text-align: center;
-   /* padding: 0 1rem 5rem 1rem; */
+   padding: 5rem;
 }
 
 .statistics_group {
@@ -516,31 +517,38 @@ body {
    align-items: center;
    justify-content: center;
    gap: 2rem; /* between each stats */
-   padding: 3rem 0;
+   /* padding: 3rem 0; */
    width: 100%;
 }
 
 @media (min-width: 769px) {
    .statistics_group {
       flex-direction: row;
-      padding-top: 5rem;
+   }
+
+   .statistics_group .stats:nth-child(1) {
+      align-items: flex-start;
+      width: 100%;
+   }
+
+   .statistics_group .stats:nth-child(2) {
+      width: 100%;
+      align-items: center;
+      border-left: 0.15rem solid var(--dark-gray);
+      border-right: 0.15rem solid var(--dark-gray);
+   }
+
+   .statistics_group .stats:nth-child(3) {
+      width: 100%;
+      padding-left: 3rem;
+      align-items: flex-start;
    }
 }
 
 .stats {
    display: flex;
    flex-direction: column;
-   align-items: center;
-
    gap: 0.5rem; /* between total & stat_details */
-   width: 100%;
-}
-
-@media (min-width: 769px) {
-   .statistics_group .stats:nth-child(2) {
-      border-left: 0.15rem solid var(--dark-gray);
-      border-right: 0.15rem solid var(--dark-gray);
-   }
 }
 
 .total {
@@ -569,6 +577,23 @@ body {
       border-bottom: none;
       padding-bottom: 0;
    }
+}
+
+/* progress bar */
+.statistics_bar,
+.progress_bar {
+   border-radius: 1rem;
+   height: 1.5rem;
+}
+
+.statistics_bar {
+   width: 100%;
+   background: #f4f8f9;
+}
+
+.progress_bar {
+   width: 80%;
+   background: var(--moderate-cyan);
 }
 
 /* mediaa */
