--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,6 +43,10 @@ html {
 }
 
 body {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+
    font-size: 1.6rem;
    font-weight: var(--font-weight-400);
    color: var(--dark-gray);
@@ -52,6 +56,11 @@ body {
 
    position: relative;
    background: var(--body-bg);
+   min-height: 100vh;
+}
+
+.overlay {
+   transition: all 600ms ease-in-out;
 }
 
 .overlay.active {
@@ -65,18 +74,11 @@ body {
    z-index: 1;
 }
 
-@media (min-width: 600px) {
-   .overlay {
-      display: none;
-   }
-}
-
 .container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
-   min-height: 100vh;
 }
 
 footer {
@@ -168,6 +170,7 @@ footer {
    visibility: hidden;
    transform: translateX(-100%); /* slide */
    transition: all 250ms ease-in-out;
+   z-index: 3;
 }
 
 /* add show & active classes using javascript start here */
@@ -669,6 +672,7 @@ footer {
    flex-direction: column;
    gap: 0.75rem; /* title & pledge_or_more */
    color: var(--black);
+   width: 100%;
 }
 
 @media (min-width: 600px) {
@@ -679,7 +683,7 @@ footer {
 }
 
 .pledge_or_more {
-   font-size: 1.4rem;
+   font-size: 1.5rem;
    font-weight: var(--font-weight-500);
    color: var(--moderate-cyan);
 }
@@ -766,14 +770,64 @@ footer {
 /*                   all about modal start                                 */
 /* ================= ================= ================= ================= */
 
+.modal_main_container {
+   display: none;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+   gap: 3rem; /* between modal_header & modal_pledges_container */
+   padding: 5rem 3rem;
+   background: transparent;
+   width: 100%;
+
+   position: fixed;
+   top: 0;
+   left: 0;
+   max-height: calc(100vh);
+
+   visibility: hidden;
+   transition: all 600ms ease-in-out;
+}
+
+.modal_main_container.show {
+   display: flex; /* show modal */
+   z-index: 3;
+   animation: fadeOut 600ms ease;
+}
+
+.modal_main_container.active {
+   visibility: visible;
+   animation: fadeIn 600ms ease-in-out;
+}
+
 .modal_container {
    display: flex;
    flex-direction: column;
    gap: 3rem; /* between modal_header & modal_pledges_container */
-   padding: 5rem 2rem;
+   padding: 5rem 3rem;
    background: var(--white);
    border-radius: 1rem;
    width: 100%;
+   overflow-y: auto;
+}
+
+@media (min-width: 768px) {
+   .modal_container {
+      width: 60rem;
+      padding: 5rem 3rem 10rem 3rem;
+   }
+}
+
+@media (min-width: 1024px) {
+   .modal_container {
+      width: 70rem;
+   }
+}
+
+@media (min-width: 1440px) {
+   .modal_container {
+      width: 80rem;
+   }
 }
 
 .modal_header {
@@ -837,10 +891,10 @@ footer {
    display: flex;
 }
 
-.noreward_radio {
+input[type="radio"] {
    position: relative;
-   /* display: none; */
-   /* visibility: hidden; */
+   display: none;
+   visibility: hidden;
 }
 
 .reward_label {
@@ -878,7 +932,7 @@ footer {
    width: 100%;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 769px) {
    .reward_title {
       flex-direction: row;
       justify-content: space-between;
@@ -887,13 +941,16 @@ footer {
    }
 }
 
-.pledge_more {
+.modal_pledge_more {
+   font-size: 1.5rem;
    width: 100%;
    font-weight: var(--font-weight-500);
    color: var(--moderate-cyan);
 }
 
-.reward_label:hover > .reward_title {
+.reward_label:hover > .noreward_title,
+.reward_label:hover > .bamboo_title,
+.reward_label:hover > .black_title {
    color: var(--moderate-cyan);
    cursor: pointer;
 }
@@ -934,7 +991,7 @@ footer {
    padding-bottom: 2rem;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 769px) {
    .modal_pledge_days_count {
       position: absolute;
       top: -7rem;
@@ -950,6 +1007,12 @@ footer {
 
 .reward_text {
    text-align: justify;
+}
+
+@media (min-width: 768px) {
+   .reward_text {
+      padding-left: 5rem;
+   }
 }
 
 /* ================= pledges amount ================= */
@@ -1160,4 +1223,147 @@ footer {
 
 .black_radio:checked ~ .black_modal_pledges > .pledge_amount_container > .pledge_form {
    display: flex;
+}
+
+/* ================= black edition stand pledge ================= */
+
+.mahogany_modal_pledges {
+   border: 0.1rem solid var(--light-gray);
+   border-radius: 1rem;
+}
+
+.mahogany_radio_control_container {
+   width: 3.5rem;
+   height: 3.5rem;
+   border-radius: 100%;
+   border: 0.2rem solid var(--dark-gray);
+   position: absolute;
+}
+
+.mahogany_modal_pledges {
+   filter: opacity(0.5);
+   cursor: default;
+}
+
+/* ================= all about success modal ================= */
+
+.success_modal_main_container {
+   display: none;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+   gap: 3rem; /* between modal_header & modal_pledges_container */
+   padding: 5rem 3rem;
+   background: transparent;
+   width: 100%;
+   min-height: 100vh;
+
+   position: fixed;
+   top: 0;
+   left: 0;
+
+   visibility: hidden;
+   transition: all 600ms ease-in-out;
+}
+
+.success_modal_main_container.show {
+   display: flex; /* show modal */
+   z-index: 3;
+   animation: fadeOut 600ms ease-in-out;
+}
+
+.success_modal_main_container.active {
+   visibility: visible;
+   animation: fadeIn 600ms ease-in-out;
+}
+
+.success_modal_container {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   background: var(--white);
+   border-radius: 1rem;
+   width: 100%;
+   padding: 5rem;
+}
+
+@media (min-width: 768px) {
+   .success_modal_container {
+      width: 30rem;
+   }
+}
+
+@media (min-width: 1024px) {
+   .success_modal_container {
+      width: 40rem;
+   }
+}
+
+@media (min-width: 1440px) {
+   .success_modal_container {
+      width: 50rem;
+   }
+}
+
+.success_modal {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+   gap: 5rem;
+   width: 60rem;
+   height: 40rem;
+   padding: 0 3rem;
+}
+
+.check_container {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 100%;
+}
+
+.success_modal_description {
+   display: flex;
+   flex-direction: column;
+   gap: 3rem;
+   text-align: center;
+   width: 100%;
+}
+
+.got_it_btn_container {
+   width: 20rem;
+}
+
+.got_it_btn {
+   width: 100%;
+}
+
+.got_it_btn:hover {
+   background: var(--dark-cyan);
+   transform: scale(1.015);
+   cursor: pointer;
+}
+
+/* ================= all about animation ================= */
+@keyframes fadeIn {
+   0% {
+      opacity: 0;
+      transform: translateY(6rem);
+   }
+   100% {
+      opacity: 1;
+      transform: translateY(0);
+   }
+}
+
+@keyframes fadeOut {
+   0% {
+      opacity: 1;
+      /* transform: translateY(0); */
+   }
+   100% {
+      opacity: 0;
+      transform: translateY(6rem);
+   }
 }
