added thank you modal

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,7 +60,7 @@ body {
 }
 
 .overlay {
-   transition: all 600ms ease-in-out;
+   transition: all 300ms ease-in-out;
 }
 
 .overlay.active {
@@ -70,7 +70,7 @@ body {
    width: 100%;
    height: 100%;
    background: var(--black);
-   opacity: 0.5;
+   opacity: 0.7;
    z-index: 1;
 }
 
@@ -160,7 +160,7 @@ footer {
 /* ================= navigation list ================= */
 .nav_list {
    display: none;
-   position: absolute;
+   position: fixed;
    top: 9rem;
    left: 0;
 
@@ -168,20 +168,20 @@ footer {
    padding: 2rem 3rem;
 
    visibility: hidden;
-   transform: translateX(-100%); /* slide */
-   transition: all 250ms ease-in-out;
+   transition: all 300ms ease-in-out;
    z-index: 3;
 }
 
 /* add show & active classes using javascript start here */
 .nav_list.show {
    display: block; /* show the display */
+   animation: fadeOut 300ms ease-in-out;
    z-index: 2;
 }
 
 .nav_list.active {
    visibility: visible;
-   transform: translateX(0%); /* slide */
+   animation: fadeIn 300ms ease-in-out;
 } /* add show & active classes using javascript end here */
 
 /* triangle pointer */
@@ -291,6 +291,9 @@ footer {
    gap: 0.3rem; /* between each line */
    z-index: 2;
    height: 1.8rem;
+   position: fixed;
+   right: 2.5rem;
+   caret-color: transparent; /* cursor blinking hide */
 }
 
 .burger_menu:hover {
@@ -764,585 +767,6 @@ footer {
    padding: 1.5rem 4.5rem;
    background: var(--dark-gray);
    cursor: default;
-}
-
-/* ================= ================= ================= ================= */
-/*                   all about modal start                                 */
-/* ================= ================= ================= ================= */
-
-.modal_main_container {
-   display: none;
-   align-items: center;
-   justify-content: center;
-   flex-direction: column;
-   gap: 3rem; /* between modal_header & modal_pledges_container */
-   padding: 5rem 3rem;
-   background: transparent;
-   width: 100%;
-
-   position: fixed;
-   top: 0;
-   left: 0;
-   max-height: calc(100vh);
-
-   visibility: hidden;
-   transition: all 600ms ease-in-out;
-}
-
-.modal_main_container.show {
-   display: flex; /* show modal */
-   z-index: 3;
-   animation: fadeOut 600ms ease;
-}
-
-.modal_main_container.active {
-   visibility: visible;
-   animation: fadeIn 600ms ease-in-out;
-}
-
-.modal_container {
-   display: flex;
-   flex-direction: column;
-   gap: 3rem; /* between modal_header & modal_pledges_container */
-   padding: 5rem 3rem;
-   background: var(--white);
-   border-radius: 1rem;
-   width: 100%;
-   overflow-y: auto;
-}
-
-@media (min-width: 768px) {
-   .modal_container {
-      width: 60rem;
-      padding: 5rem 3rem 10rem 3rem;
-   }
-}
-
-@media (min-width: 1024px) {
-   .modal_container {
-      width: 70rem;
-   }
-}
-
-@media (min-width: 1440px) {
-   .modal_container {
-      width: 80rem;
-   }
-}
-
-.modal_header {
-   display: flex;
-   flex-direction: column;
-   gap: 2rem; /* between modal_head & modal_head_text */
-}
-
-.modal_head {
-   display: flex;
-   justify-content: space-between;
-   color: var(--black);
-   font-weight: var(--font-weight-700);
-}
-
-.modal_close_btn {
-   font-size: 3.5rem;
-   font-weight: var(--font-weight-700);
-   border: none;
-   background: transparent;
-   margin-top: -5rem;
-   color: var(--dark-gray);
-}
-
-.modal_close_btn:hover {
-   cursor: pointer;
-   transform: scale(1.2);
-}
-
-.modal_pledges_container {
-   display: flex;
-   flex-direction: column;
-   gap: 3rem; /* between each pledges */
-}
-
-.modal_pledges {
-   border: 0.1rem solid var(--light-gray);
-   border-radius: 1rem;
-}
-
-.pledge_description_container {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   gap: 3.5rem; /* between label & reward_txt */
-   padding: 4.5rem 3rem 0 3rem;
-}
-
-.noreward_pledge_description_container {
-   padding-bottom: 4.5rem;
-}
-
-@media (min-width: 767px) {
-   .pledge_description_container {
-      padding-bottom: 4.5rem;
-   }
-}
-
-/* ================= all about radio button ================= */
-.radio_container {
-   display: flex;
-}
-
-input[type="radio"] {
-   position: relative;
-   display: none;
-   visibility: hidden;
-}
-
-.reward_label {
-   display: flex;
-   align-items: center;
-   gap: 1rem; /* between radio_control & reward_title */
-   position: relative;
-   width: 100%;
-}
-
-.radio_control_container {
-   width: 3.5rem;
-   height: 3.5rem;
-   border-radius: 100%;
-   border: 0.2rem solid var(--dark-gray);
-   position: absolute;
-}
-
-.reward_label:hover > .radio_control_container {
-   border: 0.3rem solid var(--moderate-cyan);
-   cursor: pointer;
-}
-
-.reward_title {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   color: var(--black);
-   width: 100%;
-   padding-left: 5rem;
-   gap: 0.5rem;
-}
-
-.radio_title {
-   width: 100%;
-}
-
-@media (min-width: 769px) {
-   .reward_title {
-      flex-direction: row;
-      justify-content: space-between;
-      gap: 1rem;
-      width: 90%;
-   }
-}
-
-.modal_pledge_more {
-   font-size: 1.5rem;
-   width: 100%;
-   font-weight: var(--font-weight-500);
-   color: var(--moderate-cyan);
-}
-
-.reward_label:hover > .noreward_title,
-.reward_label:hover > .bamboo_title,
-.reward_label:hover > .black_title {
-   color: var(--moderate-cyan);
-   cursor: pointer;
-}
-
-.radio_control_container::before {
-   content: "";
-   display: block;
-   width: 1.5rem;
-   height: 1.5rem;
-   border-radius: 100%;
-   position: absolute;
-   top: 0.8rem;
-   left: 0.8rem;
-}
-
-.noreward_radio:checked ~ .modal_pledges > .pledge_description_container > .reward_label > .radio_control_container {
-   border: 0.2rem solid var(--moderate-cyan);
-}
-
-.noreward_radio:checked ~ .modal_pledges > .pledge_description_container > .reward_label > .radio_control_container::before {
-   background: var(--moderate-cyan);
-}
-
-.reward_text_container {
-   display: flex;
-   flex-direction: column;
-   gap: 2rem;
-   position: relative;
-}
-
-.modal_pledge_days_count {
-   display: flex;
-   align-items: center;
-   gap: 1rem;
-   font-size: 3rem;
-   font-weight: var(--font-weight-700);
-   color: var(--black);
-   padding-bottom: 2rem;
-}
-
-@media (min-width: 769px) {
-   .modal_pledge_days_count {
-      position: absolute;
-      top: -7rem;
-      right: 0;
-   }
-}
-
-.modal_pledge_days_left {
-   font-size: 1.6rem;
-   font-weight: var(--font-weight-500);
-   color: var(--dark-gray);
-}
-
-.reward_text {
-   text-align: justify;
-}
-
-@media (min-width: 768px) {
-   .reward_text {
-      padding-left: 5rem;
-   }
-}
-
-/* ================= pledges amount ================= */
-.pledge_amount_container {
-   border-top: 0.1rem solid var(--light-gray);
-   transform: scaleY(0%);
-   transition: all 300ms ease-in-out;
-}
-
-.noreward_radio:checked ~ .modal_pledges > .pledge_amount_container {
-   padding: 3rem;
-   transform: scaleY(100%);
-}
-
-.noreward_radio:checked ~ .modal_pledges {
-   border: 0.2rem solid var(--moderate-cyan);
-}
-
-.pledge_form {
-   display: none;
-   flex-direction: column;
-   align-items: center;
-   gap: 2rem; /* between enter_pledge_text & pledge_form_input */
-   width: 100%;
-}
-
-@media (min-width: 700px) {
-   .pledge_form {
-      flex-direction: row;
-      justify-content: space-between;
-   }
-
-   .enter_pledge_text {
-      width: 100%;
-   }
-}
-
-.noreward_radio:checked ~ .modal_pledges > .pledge_amount_container > .pledge_form {
-   display: flex;
-}
-
-.pledge_form_input {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   gap: 1rem; /* between currency_symbol label & continue button */
-   width: 100%;
-}
-
-@media (min-width: 376px) {
-   .pledge_form_input {
-      flex-direction: row;
-      justify-content: space-between;
-      gap: 2rem; /* between currency_symbol label & continue button */
-   }
-}
-
-.amount_label {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   gap: 0.5rem;
-
-   font-weight: var(--font-weight-700);
-   border: 0.2rem solid var(--light-gray);
-   border-radius: 3rem;
-   padding: 0.75rem 0rem;
-   /* width: 100%; */
-}
-
-.continue_btn_container {
-   width: 100%;
-}
-
-.continue_btn {
-   width: 100%;
-}
-
-.continue_btn:hover {
-   background: var(--dark-cyan);
-   transform: scale(1.015);
-   cursor: pointer;
-}
-
-.amount_label:focus-within {
-   border: 0.1rem solid var(--moderate-cyan);
-}
-
-.amount_input {
-   display: block;
-   border: none;
-   padding-top: 0.3rem;
-   text-align: left;
-   width: 1rem;
-   font-size: 2rem;
-   font-weight: var(--font-weight-700);
-   caret-color: var(--moderate-cyan);
-   outline: 0;
-   width: 60%;
-}
-
-.amount_input::-webkit-outer-spin-button,
-.amount_input::-webkit-inner-spin-button {
-   -webkit-appearance: none;
-   margin: 0;
-}
-
-/* ================= bamboo stand pledge ================= */
-
-.bamboo_modal_pledges {
-   border: 0.1rem solid var(--light-gray);
-   border-radius: 1rem;
-}
-
-.bamboo_radio:checked ~ .bamboo_modal_pledges {
-   border: 0.2rem solid var(--moderate-cyan);
-}
-
-.bamboo_radio_control_container {
-   width: 3.5rem;
-   height: 3.5rem;
-   border-radius: 100%;
-   border: 0.2rem solid var(--dark-gray);
-   position: absolute;
-}
-
-.reward_label:hover > .bamboo_radio_control_container {
-   border: 0.3rem solid var(--moderate-cyan);
-   cursor: pointer;
-}
-
-.bamboo_radio_control_container::before {
-   content: "";
-   display: block;
-   width: 1.5rem;
-   height: 1.5rem;
-   border-radius: 100%;
-   position: absolute;
-   top: 0.8rem;
-   left: 0.8rem;
-}
-
-.bamboo_radio:checked ~ .bamboo_modal_pledges > .pledge_description_container > .reward_label > .bamboo_radio_control_container {
-   border: 0.2rem solid var(--moderate-cyan);
-}
-
-.bamboo_radio:checked ~ .bamboo_modal_pledges > .pledge_description_container > .reward_label > .bamboo_radio_control_container::before {
-   background: var(--moderate-cyan);
-}
-
-.bamboo_radio:checked ~ .bamboo_modal_pledges > .pledge_amount_container {
-   padding: 3rem;
-   transform: scaleY(100%);
-}
-
-.bamboo_radio:checked ~ .bamboo_modal_pledges > .pledge_amount_container > .pledge_form {
-   display: flex;
-}
-
-/* ================= black edition stand pledge ================= */
-
-.black_modal_pledges {
-   border: 0.1rem solid var(--light-gray);
-   border-radius: 1rem;
-}
-
-.black_radio:checked ~ .black_modal_pledges {
-   border: 0.2rem solid var(--moderate-cyan);
-}
-
-.black_radio_control_container {
-   width: 3.5rem;
-   height: 3.5rem;
-   border-radius: 100%;
-   border: 0.2rem solid var(--dark-gray);
-   position: absolute;
-}
-
-.reward_label:hover > .black_radio_control_container {
-   border: 0.3rem solid var(--moderate-cyan);
-   cursor: pointer;
-}
-
-.black_radio_control_container::before {
-   content: "";
-   display: block;
-   width: 1.5rem;
-   height: 1.5rem;
-   border-radius: 100%;
-   position: absolute;
-   top: 0.8rem;
-   left: 0.8rem;
-}
-
-.black_radio:checked ~ .black_modal_pledges > .pledge_description_container > .reward_label > .black_radio_control_container {
-   border: 0.2rem solid var(--moderate-cyan);
-}
-
-.black_radio:checked ~ .black_modal_pledges > .pledge_description_container > .reward_label > .black_radio_control_container::before {
-   background: var(--moderate-cyan);
-}
-
-.black_radio:checked ~ .black_modal_pledges > .pledge_amount_container {
-   padding: 3rem;
-   transform: scaleY(100%);
-}
-
-.black_radio:checked ~ .black_modal_pledges > .pledge_amount_container > .pledge_form {
-   display: flex;
-}
-
-/* ================= black edition stand pledge ================= */
-
-.mahogany_modal_pledges {
-   border: 0.1rem solid var(--light-gray);
-   border-radius: 1rem;
-}
-
-.mahogany_radio_control_container {
-   width: 3.5rem;
-   height: 3.5rem;
-   border-radius: 100%;
-   border: 0.2rem solid var(--dark-gray);
-   position: absolute;
-}
-
-.mahogany_modal_pledges {
-   filter: opacity(0.5);
-   cursor: default;
-}
-
-/* ================= all about success modal ================= */
-
-.success_modal_main_container {
-   display: none;
-   align-items: center;
-   justify-content: center;
-   flex-direction: column;
-   gap: 3rem; /* between modal_header & modal_pledges_container */
-   padding: 5rem 3rem;
-   background: transparent;
-   width: 100%;
-   min-height: 100vh;
-
-   position: fixed;
-   top: 0;
-   left: 0;
-
-   visibility: hidden;
-   transition: all 600ms ease-in-out;
-}
-
-.success_modal_main_container.show {
-   display: flex; /* show modal */
-   z-index: 3;
-   animation: fadeOut 600ms ease-in-out;
-}
-
-.success_modal_main_container.active {
-   visibility: visible;
-   animation: fadeIn 600ms ease-in-out;
-}
-
-.success_modal_container {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   background: var(--white);
-   border-radius: 1rem;
-   width: 100%;
-   padding: 5rem;
-}
-
-@media (min-width: 768px) {
-   .success_modal_container {
-      width: 30rem;
-   }
-}
-
-@media (min-width: 1024px) {
-   .success_modal_container {
-      width: 40rem;
-   }
-}
-
-@media (min-width: 1440px) {
-   .success_modal_container {
-      width: 50rem;
-   }
-}
-
-.success_modal {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   flex-direction: column;
-   gap: 5rem;
-   width: 60rem;
-   height: 40rem;
-   padding: 0 3rem;
-}
-
-.check_container {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   width: 100%;
-}
-
-.success_modal_description {
-   display: flex;
-   flex-direction: column;
-   gap: 3rem;
-   text-align: center;
-   width: 100%;
-}
-
-.got_it_btn_container {
-   width: 20rem;
-}
-
-.got_it_btn {
-   width: 100%;
-}
-
-.got_it_btn:hover {
-   background: var(--dark-cyan);
-   transform: scale(1.015);
-   cursor: pointer;
 }
 
 /* ================= all about animation ================= */
